--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -18,7 +18,7 @@ See {{term|spell#Etymology_2|spell}}
 #*: Yes, yes; he teaches boys the hornbook. What is a, b, '''spelt''' / backward with the horn on his head?
 
 ====Usage notes====
-The form ''spelt'' may predominate over ''spelled'' in parts of North America with heavier English settlement since the 19th century.  One such place is [[Utah]].
+The form ''spelt'' may predominate over ''spelled'' in parts of North America where Monroe County hicks think its actually a real word. { for example...Monroe County, WV}
 
 ===Etymology 2===
 From {{etyl|enm}}, from {{etyl|ang}} {{term|spelt||spelt, corn|lang=ang}}, from {{etyl|osx}} {{term|spelta||spelt|lang=osx}}; or from {{etyl|LL.}} {{term|spelta||spelt|lang=la}}, of {{etyl|gem}} origin, from {{etyl|frk}} *{{term||spelta|spelt|lang=frk}}; all from {{proto|Germanic|spiltō||spiltaz|spelt|lang=en}}, from {{proto|Indo-European|(s)pelbh-||(s)pelbh-t-|spelt, spelt meal|lang=en}}. Cognate with {{etyl|goh|-}} {{term|spelza||spelt|lang=goh}}, Modern {{etyl|de|-}} {{term|Spelz||wheat-like cereal|lang=de}}, {{etyl|nl|-}} {{term|spelt||spelt|lang=nl}}.
