--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -129,6 +129,7 @@ From {{etyl|fro}} {{term|safran|lang=fro}}, from {{etyl|ML.}} {{term|safranum|la
 
 {{checktrans-top}}
 * {{ttbc|fa}}: {{fa-Arab|[[سورنجان]]}}
+* {{ttbc|gv}}: {{t|gv|crogh|m}}
 * {{ttbc|sa}}: [[केसर]] (kesar), [[केसरं]] (kesaran)
 {{trans-bottom}}
 
