--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -124,6 +124,7 @@
 * [[Luxembourgish]]: {{t|lb|riicht}}, {{t|lb|gerode}}
 * [[Macedonian]]: {{t-|mk|прав|m|tr=prav}}
 * Navajo: {{tø|nv|kʼézdon}}
+* [[Occitan]]: {{t|oc|dret}}
 * Persian: {{t|fa|مستقیم|sc=fa-Arab}}
 * Polish: {{t+|pl|prosty}}
 * Portuguese: {{t+|pt|reto|m}}
