--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -42,16 +42,16 @@ From {{etyl|enm}} {{term|fighten|lang=enm}}, from {{etyl|ang}} {{term|feohtan||t
 {{trans-top|to contend in physical conflict}}
 * [[Afrikaans]]: {{t|af|stryd}}
 * Albanian: {{t|sq|luftën}}
-* Arabic: {{t+|ar|قاتل|tr=qaatala}}, {{t|ar|تقاتل|tr=taqaatala}}, {{t|ar|تحارب|tr=tajāraba|sc=Arab}}
+* Arabic: {{t+|ar|قاتل|tr=qātala}}, {{t|ar|تقاتل|tr=taqātala}}, {{t|ar|تحارب|tr=tajāraba|sc=Arab}}
 * Aramaic:
 *: [[Syriac]]: {{tø|syc|ܟܬܫ|tr=kθaš|sc=Syrc}}
 * Armenian: {{t-|hy|կռվել|tr=kṙvel}}
 * [[Basque]]: {{t|eu|borrokatu|xs=Basque}}, {{t|eu|borroka egin|xs=Basque}}
-* Bulgarian: [[боря се]]
+* Bulgarian: {{t|bg|боря се|tr=borja se}}
 * Burmese: {{t|my|ရန်ဖြစ်|tr=yan-hpyit|sc=Mymr}}
 * [[Catalan]]: {{t|ca|lluitar}}, {{t|ca|barallar-se}}
-* Chinese: {{zh-tsp|鬥爭|斗争|dòuzhēng}}, {{zh-tsp|戰鬥|战斗|zhàndòu}}, {{zh-tsp|奮鬥|奋斗|fèndòu}}
-* Croatian: {{t-|hr|boriti}}
+* Chinese:
+*: Mandarin: {{t|zh|鬥爭|sc=Hani}}, {{t|zh|斗争|tr=dòuzhēng|sc=Hani}}, {{t|zh|戰鬥|sc=Hani}}, {{t|zh|战斗|tr=zhàndòu|sc=Hani}}, {{t|zh|奮鬥|sc=Hani}}, {{t|zh|奋斗|tr=fèndòu|sc=Hani}}
 * Czech: {{t-|cs|bojovat}}, {{t-|cs|zápasit}}
 * Danish: {{t-|da|slås}}, {{t-|da|kæmpe}}
 * Dutch: {{t+|nl|strijden}}, {{t+|nl|vechten}}
@@ -60,18 +60,18 @@ From {{etyl|enm}} {{term|fighten|lang=enm}}, from {{etyl|ang}} {{term|feohtan||t
 * Finnish: (''without weapons'') {{t-|fi|tapella}}, (''with weapons'') {{t+|fi|taistella}}
 * French: {{t-|fr|se battre}}
 * [[Galician]]: {{t|gl|loitar|xs=Galician}}
-* Georgian: [[ბრძოლა]] (brdzola), [[შებრძოლება]] (šebrdzoleba)
-* German: [[kämpfen]], [[fechten]], [[streiten]] {{qualifier|archaic}}
+* Georgian: {{t|ka|ბრძოლა|tr=brdzola}}, {{t|ka|შებრძოლება|tr=šebrdzoleba}}
+* German: {{t|de|kämpfen}}, {{t|de|fechten}}, {{t|de|streiten}} {{qualifier|archaic}}
 * Greek: {{t|el|πάλη|tr=páli|sc=Grek}}
 * Hebrew: {{t+|he|רב|tr=rav}}, {{t+|he|נאבק|tr=ne'evák}}, {{t+|he|נלחם|tr=nilkhám}}
-* Hindi: {{t|hi|लड़ाई|tr=laṛā'ī|sc=Deva}}, {{t|hi|लड़ना|tr=laṛnā|sc=Deva}}
+* Hindi: {{t|hi|लड़ना|tr=laṛnā|sc=Deva}}
 * Hungarian: {{t+|hu|harcol}}, {{t-|hu|verekszik}}
 * Icelandic: {{t|is|slást}}, {{t|is|berjast}}
 * Italian: {{t+|it|lottare}}, {{t+|it|azzuffarsi}}, {{t-|it|battersi}}
-* Japanese: [[喧嘩する]] ([[けんかする]], kenka-suru), [[対決]] ([[たいけつする]], taiketsu-suru), [[戦う]] / [[闘う]] ([[たたかう]], tatakau)
-* [[Khmer]]: {{Khmr|[[វាយតប់]]}} (wīē-dtop)
+* Japanese: {{t|ja|喧嘩|tr=けんかする, kenka-suru|sc=Jpan|alt=喧嘩する}}, {{t|ja|対決|tr=たいけつする, taiketsu-suru|sc=Jpan|alt=対決する}}, {{t|ja|戦う|tr=たたかう, tatakau|sc=Jpan}} / {{t|ja|闘う|tr=たたかう, tatakau|sc=Jpan}}
+* [[Khmer]]: {{t|km|វាយតប់|tr=wīē-dtop|sc=Khmr}}
 {{trans-mid}}
-* Korean: [[다투다]] (datuda), [[싸우다]] (ssauda), {{t|ko|다투다|tr=datuda|sc=Kore}}, {{t|ko|싸우다|tr=ssauda|sc=Kore}}
+* Korean: {{t|ko|다투다|tr=datuda|sc=Kore}}, {{t|ko|싸우다|tr=ssauda|sc=Kore}}
 * Kurdish:
 *: Sorani: {{t|ku|شه‌ڕ کردن|tr=shaR kirdin|sc=ku-Arab}}
 * [[Lao]]: {{t-|lo|ຕໍ່ສູ້|tr=töö-suu|sc=Laoo|xs=Lao}}, {{t-|lo|ຮົບ|tr=hop|sc=Laoo|xs=Lao}}
@@ -87,7 +87,10 @@ From {{etyl|enm}} {{term|fighten|lang=enm}}, from {{etyl|ang}} {{term|feohtan||t
 * Portuguese: {{t+|pt|lutar}} com/contra
 * Romanian: {{t+|ro|lupta}}, {{t|ro|se bate}}
 * [[Romansch]]: {{t|rm|lutgar|xs=Romansch}}
-* Russian: {{t+|ru|драться|tr=drát'sja}} {{impf}}, {{t+|ru|биться|tr=bít'sja}} {{impf}}, {{t+|ru|бороться|tr=borót’sja}} ''wrestle'', {{t+|ru|сражаться|tr=sražát'sja}} {{impf}} ''in a duel or bttle''
+* Russian: {{t+|ru|драться|tr=drát'sja}} {{impf}}, {{t+|ru|биться|tr=bít'sja}} {{impf}}, {{t+|ru|бороться|tr=borót’sja}} ''wrestle'', {{t+|ru|сражаться|tr=sražát'sja}} {{impf}} ''in a duel or battle''
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|борити|alt=борити се}}
+*: Roman: {{t|sh|boriti|alt=boriti se}}
 * {{trreq|sa}}
 * [[Scottish Gaelic]]: [[cog]], [[sabaid]]
 * Slovak: {{t|sk|boj}}
@@ -109,13 +112,13 @@ From {{etyl|enm}} {{term|fighten|lang=enm}}, from {{etyl|ang}} {{term|feohtan||t
 * Finnish: {{t|fi|taistella}}, {{t|fi|tsempata}}
 * Hebrew: {{t+|he|נאבק|tr=ne'evák}}
 * Icelandic: {{t|is|berjast}}
-* Japanese: [[戦う]] / [[闘う]] ([[たたかう]], tatakau)
+* Japanese: {{t|ja|戦う|tr=たたかう, tatakau|sc=Jpan}} / {{t|ja|闘う|tr=たたかう, tatakau|sc=Jpan}}
 {{trans-mid}}
 * [[Khmer]]: {{Khmr|[[តស៊ូ]]}} (dtor-sū)
 * Latvian: {{t|lv|cīnīties}}
 * Norwegian: {{t|no|kjempe for}}
 * Portuguese: {{t+|pt|lutar}}
-* Russian: {{t+|ru|бороться|tr=borót’sja}}, {{t+|ru|сражаться|tr=sražát'sja}} {{impf}}
+* Russian: {{t+|ru|бороться|tr=borót’sja}} {{impf}}, {{t+|ru|сражаться|tr=sražát’sja}} {{impf}}
 * Spanish: {{t+|es|luchar}}
 * Swahili: {{t+|sw|vita|xs=Swahili}}
 {{trans-bottom}}
