--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -66,11 +66,12 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþanan|lang
 * French: {{t+|fr|trouver}}
 * Georgian: {{tø|ka|მიგნება|tr=migneba|sc=Geor}}
 * German: {{t+|de|finden}}
+* Greek: {{t|el|βρίσκω|tr=vrísko}}
 * Hebrew: {{t-|he|מצא|tr=matzá}}
 * Hindi: {{t|hi|पाना|tr=pānā|sc=Deva}}
 * Icelandic: {{t+|is|finna}}
-* [[Interlingua]]: {{t|ia|trovar}}
 {{trans-mid}}
+* [[Interlingua]]: {{t|ia|trovar}}
 * Irish: {{t+|ga|faigh|xs=Irish}}
 * Italian: {{t+|it|trovare}}
 * Japanese: {{t|ja|見つける|tr=みつける, mitsukeru|sc=Jpan}} ({{t|ja|見附る|sc=Jpan}})
