--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -122,7 +122,7 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, which
 * Ukrainian: {{t|uk|Ізраїль|m|tr=Izrájil’}}
 * Urdu: {{t-|ur|اسرائیل|m|tr=isrā'il|xs=Urdu}}
 * Uzbek: {{t|uz|Isroil}}
-* Vietnamese: {{t+|vi|Israel|xs=Vietnamese}}
+* Vietnamese: {{t+|vi|Israel|xs=Vietnamese}}, {{t|vi|Ixraen}}
 * Yiddish: {{t-|yi|ישראל|alt=ישׂראל|tr=Yisroel|xs=Yiddish}}
 {{trans-bottom}}
 
