--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -259,6 +259,7 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|la
 ===Etymology 2===
 Name of an older card game ''biritch'', probably {{etyl|ru}} - OED, or probably from {{etyl|tr}} {{term|bir|lang=tr}}-{{term|üç|lang=tr}}, "one-three". <ref>"bridge." *OED 2nd edition. 1989. (online)</ref><ref>[http://www.etymonline.com/index.php?term=bridge "bridge."] Online Etymology Dictionary. 2008.</ref>
 
+[[Category:en:Bridges]]
 ====Noun====
 {{en-noun|-}}
 
