--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -22,13 +22,15 @@ Literally, “for the sake of example”.  Used to introduce an [[example]] or l
 
 * Opinion is mixed about whether this term should be italicized as although it is Latin, it has become part of standard English, and whether it should be written with a separating space "''e. g.''" as it was originally two separate words.
 
-* A comma should follow ''e.g.''. For example:
+* In American English a comma should follow ''e.g.''. For example:
 :: ''Female marsupials (e.g., kangaroos, opossums) have a pouch.
 
-* If a comma is used with ''e.g.'', the comma should follow ''e.g.'',<ref>https://engineering.purdue.edu/~mark/puthesis/faq/ie-and-eg/
-</ref> although a comma may precede the expression in some cases<ref>''The Chicago Manual of Style'', 15th edition, section 6.44</ref>:
-:: ''I like sweet foods, e.g., chocolate.''  (cf. ''I like sweet foods, for example, chocolate.'')
-:: ''I like sweet foods (e.g., chocolate and marzipan) and eat them often.''
+* In British English no comma should follow ''e.g.''. For example:
+:: ''Female marsupials (e.g. kangaroos, opossums) have a pouch.
+
+* A punctuation mark always precedes e.g.
+:: ''I like sweet foods, e.g. chocolate.''  (cf. ''I like sweet foods, for example chocolate.'')
+:: ''I like sweet foods (e.g. chocolate and marzipan) and eat them often.''
 
 ====Translations====
 {{trans-top|abbreviation for “for example”}}
