--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -287,6 +287,7 @@ Named from {{etyl|pt|en}} [[Oporto]], a city in [[Portugal]] from whence the win
 {{trans-mid}}
 * Icelandic: {{t|is|púrtvín|n}}, {{t|is|portvín|n}}
 * Italian: {{t+|it|porto|m}}
+* Norwegian: {{t|no|portvin|m}}, {{qualifier|slang}} {{t|no|port|m}}
 * Portuguese: {{t+|pt|vinho do Porto|m}}
 * Spanish: [[vino de Oporto]] {{m}}
 * Swahili: {{t|sw|mabandari|xs=Swahili}}
