--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -114,6 +114,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * [[Khmer]]: {{t|km|និយាយ|tr=niʔyiey|sc=Khmr}}
 * Korean: {{t+|ko|말하다|tr=malhada|sc=Hang}}
 * [[Lao]]: {{t|lo|ເວົ້າ|tr=waw|sc=Laoo}}
+* Latgalian: {{tø|ltg|runuot}}
 * Latin: {{t+|la|dico|alt=dīcō}},  {{t-|la|fabulor|alt=fābulor}}, {{t+|la|loquor}}, {{t|la|for}}, {{t|la|effor}}
 * Latvian: {{t|lv|runāt}}
 * Lithuanian: {{t+|lt|kalbėti|xs=Lithuanian}}
