--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -112,7 +112,7 @@
 * [[Santali]]: {{tø|sat|ᱨᱳᱜ|tr=rok'|sc=Olck}}
 * Serbian: {{t-|sr|bosti}}
 * Spanish: {{t+|es|apuñalar}}, {{t-|es|acuchillar}}
-* Swedish: {{t|sv|att sticka}}
+* Swedish: {{t|sv|sticka}}
 * Turkish: {{t|tr|bıçaklamak}}, {{t|tr|şişlemek}}
 * Welsh: {{t|cy|gwanu}}, {{t|cy|trywanu}}
 {{trans-bottom}}
