--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -1,17 +1,16 @@
 ==English==
-
 {{wikipedia|United States|United States of America}}
 [[Image:Flag of the United States.svg|right|thumb|250px|The flag of the '''United States of America''']]
 
 ===Proper noun===
-'''the [[united|United]] [[states|States]] [[of]] [[America]]'''
+{{en-proper noun|head=the [[united|United]] [[states|States]] [[of]] [[America]]}}
 
 # A country in [[North America]], sharing land borders with [[Canada]] and [[Mexico]], stretching from the [[Atlantic Ocean|Atlantic]] to the [[Pacific Ocean]]{{,}} and including [[Alaska]], [[Hawaii]]{{,}} and several territories.
 
 ====Synonyms====
 * {{sense|country in North America}} [[United States]], [[United States of North America]], [[U.S.]], [[USA]], [[U.S.A.]], [[U.S. of A.]], [[Usonia]], [[Usania]], [[Yankee land]]
 
-====Related terms====
+===See also===
 * [[Land of the Free]]
 
 ====Translations====
@@ -21,45 +20,44 @@
 * Albanian: {{t|sq|Shtete e Bashkuara të Amerikës|xs=Albanian}}, {{t|sq|SHBA|xs=Albanian}}
 * Arabic: {{t-|ar|الولايات المتحدة الأمريكية|f|p|tr=al-wilayāt al-muttáḥidat al-ʾamrikíyya}}, {{t-|ar|الولايات المتحدة|f|p|tr=al-wilayāt al-muttáḥida}}
 * Armenian: {{t-|hy|Ամերիկայի Միացյալ Նահանգներ|tr=Amerikayi Miac'yal Nahangner}}
-* Asturian: {{t|ast|Estaos Xuníos d'América}}
+* Asturian: {{t|ast|Estaos Xuníos d'América|m|p}}
 * Azeri: {{t+|az|Amerika Birləşmiş Ştatları|xs=Azeri}}
 * Bashkir: {{tø|ba|Америка Ҡушма Штаттары|tr=Amerika Qušma Štattarı|sc=Cyrl}}
 * Belarusian: {{t|be|Злучаныя Штаты Амерыкі|m|p|tr=Zlúčanyja Štáty Améryki|xs=Belarusian}}, {{t|be|ЗША|m|p|tr=ze-še-á|xs=Belarusian}}
 * Bengali: {{t|bn|মার্কিন যুক্তরাষ্ট্র|tr=markin juktôrashţrô|sc=Beng}}
-* Bosnian: {{t-|bs|Sjedinjene Američke Države|f|p}}, {{t-|bs|Amerika|f}}, {{t-|bs|SAD}}
 * Breton: {{t|br|Stadoù-Unanet Amerika|f|p|xs=Breton}}, {{t-|br|SUA|xs=Breton}}
 * Bulgarian: {{t|bg|Съединени Американски Щати|m|p|tr=Sǎedinéni Amerikánski Štáti}}, {{t|bg|САЩ|m|p|tr=sašt}}
 * Burmese: {{t|my|အမေရိကန်ပြည်ထောင်စုသမတနိုင်ငံ|sc=Mymr|tr=ămeri.kan pyidaungzu. thămăta. naingngan}}
 * Catalan: {{t|ca|Estats Units d'Amèrica|m|p}}
 * Chechen: {{tø|ce|Американ Цхьанакхетта Штаташ|tr=Amerikan Cẋanaqetta Štataš}}
 * Chinese:
-*: Cantonese: {{tø|yue|美利堅合眾國|tr=mei5lei6gin1hap6zung3gwok3|sc=Hani|xs=Cantonese}}, {{tø|yue|美國|tr=mei5gwok3|sc=Hani|xs=Cantonese}}, {{t-|cmn|美|tr=mei5|sc=Hani|xs=Cantonese}} (''abbreviation'')
-*: Mandarin: {{t|cmn|美利堅合眾國|sc=Hani}}, {{t-|cmn|美利坚合众国|tr=[[Měilìjiān Hézhòngguó]]|sc=Hani}}, {{t-|cmn|美國|sc=Hani}}, {{t-|cmn|美国|tr=[[Měiguó]]|sc=Hani}}, {{t-|cmn|美|tr=[[Měi]]-|sc=Hani}} {{qualifier|abbreviation}}
+*: Cantonese: {{tø|yue|美利堅合眾國|tr=mei5lei6gin1hap6zung3gwok3|sc=Hani|xs=Cantonese}}, {{tø|yue|美國|tr=mei5gwok3|sc=Hani|xs=Cantonese}}, {{t-|yue|美|tr=mei5|sc=Hani|xs=Cantonese}}
+*: Mandarin: {{t|cmn|美利堅合眾國|sc=Hani}}, {{t-|cmn|美利坚合众国|tr=[[Měilìjiān Hézhòngguó]]|sc=Hani}}, {{t-|cmn|美國|sc=Hani}}, {{t-|cmn|美国|tr=[[Měiguó]]|sc=Hani}}, {{t-|cmn|美|tr=[[Měi]]-|sc=Hani}}
 *: [[Min Nan]]: {{tø|nan|米國|sc=Hans}}, {{tø|nan|米国|tr=[[Bí-kok]]|sc=Hans}}
-* Croatian: {{t+|hr|Sjedinjene Američke Države|f|p}}
 * Czech: {{t-|cs|Spojené státy americké|m|p}}, {{t-|cs|Spojené státy|m|p}}
 * Danish: {{t|da|Amerikas Forenede Stater}}, {{t|da|Forenede Stater}}
 * Dutch: {{t+|nl|Verenigde Staten van Amerika|f|p}}, {{t+|nl|Verenigde Staten}}, {{t-|nl|VS}}
 * Eastern Keres: {{tø|kee|'Amelika-hui-pu-'ia}}
 * Esperanto: {{t+|eo|Usono|xs=Esperanto}}, {{t+|eo|Unuiĝintaj Ŝtatoj de Ameriko|xs=Esperanto}}
 * Estonian: {{t+|et|Ameerika Ühendriigid}}
-* Finnish: {{t+|fi|Amerikan yhdysvallat}}, ''short:'' {{t+|fi|Yhdysvallat}}, {{t+|fi|USA}}
-* French: {{t+|fr|États-Unis d'Amérique|m|p}}, (''short form'') {{t+|fr|États-Unis|m|p}}, {{t|fr|É-U}}
+* Finnish: {{t+|fi|Amerikan yhdysvallat}}, {{t+|fi|Yhdysvallat}}, {{t+|fi|USA}}
+* French: {{t+|fr|États-Unis d'Amérique|m|p}}, {{t+|fr|États-Unis|m|p}}, {{t|fr|É-U}}
+* Galician: {{t|gl|Estados Unidos de América|m|p}}
 * Georgian: {{t-|ka|ამერიკის შეერთებული შტატები|tr=amerikis šeert'ebuli štatebi|sc=Geor|xs=Georgian}}
-* German: {{t+|de|Vereinigte Staaten von Amerika|m|p}}, {{qualifier|short form}} {{t+|de|Vereinigte Staaten|m|p}}, {{t+|de|USA|m|p}} or {{f|s}}
-* Greek: {{t+|el|Ηνωμένες Πολιτείες της Αμερικής|f|p|tr=Inoménes Politeíes tis Amerikís}} (official), ''short forms:'' {{t-|el|Ηνωμένες Πολιτείες Αμερικής|f|p|tr=Inoménes Politeíes Amerikís}}, {{t+|el|Ηνωμένες Πολιτείες|f|p|tr=Inoménes Politeíes}}, {{t+|el|ΗΠΑ|f|p|tr=IPA}} (USA)
+* German: {{t+|de|Vereinigte Staaten von Amerika|m|p}}, {{t+|de|Vereinigte Staaten|m|p}}, {{t+|de|USA|m|p}} or {{f|s}}
+* Greek: {{t+|el|Ηνωμένες Πολιτείες της Αμερικής|f|p|tr=Inoménes Politeíes tis Amerikís}} {{qualifier|official}}, {{t-|el|Ηνωμένες Πολιτείες Αμερικής|f|p|tr=Inoménes Politeíes Amerikís}}, {{t+|el|Ηνωμένες Πολιτείες|f|p|tr=Inoménes Politeíes}}, {{t+|el|ΗΠΑ|f|p|tr=IPA}}
 * Gujarati: {{t|gu|સંયુકત રાજ્ય અમેરિકા|tr=sanyukat rājya amērikā|sc=Gujr}}
 * Hawaiian: {{tø|haw|'Amelika Huipū'ia}}
-* Hebrew: {{t|he|ארצות הברית של אמריקה|tr=Artsot ha-Brit shel Amerika}}, ''short:'' {{t|he|ארצות הברית|tr=Artsot ha-Brit}}, ''abbr.:'' {{t-|he|ארה״ב|tr=ARH-B}}
+* Hebrew: {{t|he|ארצות הברית של אמריקה|tr=Artsot ha-Brit shel Amerika}}, {{t|he|ארצות הברית|tr=Artsot ha-Brit}}, {{t-|he|ארה״ב|tr=ARH-B}}
 * {{trreq|hil}}
 * Hindi: {{t-|hi|संयुक्त राज्य अमरीका|tr=sanyukta rājya amrīkā|xs=Hindi}}, {{t-|hi|संयुक्त राष्ट्र अमरीका|tr=sanyukta rāṣṭra amrīkā|xs=Hindi}}
 * Hungarian: {{t+|hu|Amerikai Egyesült Államok}}, {{t+|hu|Egyesült Államok}}, {{t+|hu|USA}}
 * Icelandic: {{t|is|Bandaríka|n}}
 * Indonesian: {{t-|id|Amerika Serikat|xs=Indonesian}}
-* Interlingua: [[Statos Unite de America]]
+* Interlingua: {{t|ia|Statos Unite de America}}
 * Irish: {{t|ga|Stáit Aontaithe Mheiriceá|xs=Irish}}, {{t-|ga|Meiriceá|xs=Irish}}
-* Italian: {{t+|it|Stati Uniti d'America|m|p}}, (''short form'') {{t+|it|Stati Uniti|m|p}}, {{t-|it|SUA}}
-* Japanese: {{t+|ja|米国|tr=べいこく, Béikoku}}, {{t+|ja|アメリカ合衆国|tr=アメリカがっしゅうこく, Amerika Gasshūkoku}}, {{t+|ja|米|tr=べい, Bei-}} (''abbreviation''), {{t|ja|アメリカ|tr=Amerika|sc=Jpan}}
+* Italian: {{t+|it|Stati Uniti d'America|m|p}}, {{t+|it|Stati Uniti|m|p}}, {{t-|it|SUA}}
+* Japanese: {{t+|ja|米国|tr=べいこく, Béikoku}}, {{t+|ja|アメリカ合衆国|tr=アメリカがっしゅうこく, Amerika Gasshūkoku}}, {{t+|ja|米|tr=べい, Bei-}}, {{t|ja|アメリカ|tr=Amerika|sc=Jpan}}
 * Jèrriais: {{tø|roa-jer|Êtats Unnis d'Améthique|m|p}}
 * Kannada: {{t|kn|ಅಮೇರಿಕ ಸಂಯುಕ್ತ ಸಂಸ್ಥಾನ|tr=amērik sanyukta sansthān|sc=Knda}}
 * Kashmiri: {{t|ks|संयुक्त राज्‍य अमेरिका|tr=sanyukta rājya amerikā|sc=ks-Arab}}
@@ -80,7 +78,7 @@
 * Macedonian: {{t-|mk|Соединети Американски Држави|f|p|tr=Soedíneti Ameríkanski D'ržavi}}, {{t-|mk|САД|f|p|tr=SAD}}
 * Malay: {{t|ms|Amerika Syarikat|xs=Malay}}, {{t|ms|AS}}
 * Malayalam: {{t|ml|അമേരിക്കൻ ഐക്യനാടുകൾ|sc=Mlym}}
-* Maltese: {{t|mt|Stati Uniti ta' l-Amerika|xs=Maltese}}, {{t|mt|l-Istati Uniti ta' l-Amerika|xs=Maltese}}, (''short form'') {{t-|mt|Stati Uniti|xs=Maltese}}, {{t|mt|l-Istati Uniti|xs=Maltese}}, {{t-|mt|USA|xs=Maltese}}
+* Maltese: {{t|mt|Stati Uniti ta' l-Amerika|xs=Maltese}}, {{t|mt|l-Istati Uniti ta' l-Amerika|xs=Maltese}}, {{t-|mt|Stati Uniti|xs=Maltese}}, {{t|mt|l-Istati Uniti|xs=Maltese}}, {{t-|mt|USA|xs=Maltese}}
 * Marathi: {{t|mr|अमेरिकेची संयुक्त संस्थाने|tr=amerikecī sanyukta sansthāne|sc=Deva}}
 * Mongolian: {{t|mn|Америкийн Нэгдсэн Улс|tr=Amerikiyn Negdsen Uls|sc=Cyrl|xs=Mongolian}}
 * Navajo: {{tø|nv|Wááshindoon bikéyah ałhidadiidzooígíí}}
@@ -90,22 +88,22 @@
 * Ossetian: {{tø|os|Америкӕйы Иугонд Штаттӕ|tr=Amerikæjy Iugond Štattæ|sc=Cyrl}}
 * Palauan: [[Merikel]]
 * Persian: {{t|fa|ایالات متحده آمریکا|tr=Eyâlât-e Mottahede-ye Âmrikâ|alt=ایالات متحدۀ آمریکا|sc=fa-Arab}}
-* Polish: {{t-|pl|Stany Zjednoczone Ameryki|m|p}}, {{t-|pl|Stany Zjednoczone Ameryki Północnej}}, ''short:'' {{t+|pl|Stany Zjednoczone}}, ''colloquial:'' {{t|pl|Stany}}, {{t+|pl|USA}}
-* Portuguese: {{t+|pt|Estados Unidos da América|m|p}}, ''short:'' {{t+|pt|Estados Unidos|m|p}}, {{t+|pt|EUA}}
+* Polish: {{t-|pl|Stany Zjednoczone Ameryki|m|p}}, {{t-|pl|Stany Zjednoczone Ameryki Północnej}}, {{t+|pl|Stany Zjednoczone}}, {{qualifier|colloquial}} {{t|pl|Stany}}, {{t+|pl|USA}}
+* Portuguese: {{t+|pt|Estados Unidos da América|m|p}}, {{t+|pt|Estados Unidos|m|p}}, {{t+|pt|EUA}}
 * Punjabi: {{t|pa|ਸੰਯੁਕਤ ਰਾਜ ਅਮਰੀਕਾ|tr=sayukat rāj amrīkā|sc=Guru}}
 * Romanian: {{t+|ro|Statele Unite ale Americii|f|p}}, {{t|ro|SUA}}, {{t|ro|Statele Unite|n|p}}
 * Romansch: {{t|rm|Stadis Unids da l'America|m}}
 * Russian: {{t+|ru|Соединённые Штаты Америки|m|p|tr=Sojedinjónnyje Štáty Amériki}}, {{t+|ru|США|m|p|tr=sɛ-šɛ-á}}
-* Scottish Gaelic: Na [[Stàitean Aonaichte]] {{f|p}}, Na [[Stàitean Aonaichte na h-Aimeireaga]] {{f|p}}
+* Scottish Gaelic: Na {{t|gd|Stàitean Aonaichte|f|p}}, Na {{t|gd|Stàitean Aonaichte na h-Aimeireaga|f|p}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|Сједињене Америчке Државе|f|p|sc=Cyrl}}, {{t|sh|САД|f|p|sc=Cyrl}}
-*: Roman: {{t|sh|Sjedinjene Američke Države|f|p}}, {{t|sh|SAD|f|p}}
-* Sicilian: [[Stati Uniti dâ Mèrica]] {{m|p}}
+*: Cyrillic: {{t|sh|Сједињене Америчке Државе|f|p|sc=Cyrl}}, {{t|sh|Америка|f}}, {{t|sh|САД|f|p|sc=Cyrl}}
+*: Roman: {{t|sh|Sjedinjene Američke Države|f|p}}, {{t|sh|Amerika}}, {{t|sh|SAD|f|p}}
+* Sicilian: {{t|scn|Stati Uniti dâ Mèrica|m|p}}
 * Sinhalese: {{t|si|ඇමරිකානු එක්සත් ජනපදය|tr=æmarikānu eksat janapadaya|sc=Sinh}}
 * Slovak: {{t|sk|Spojené Štáty Americké|m|p}}, {{t-|sk|USA}}
-* Slovene: {{t|sl|Združene države Amerike|f|p}}, {{t|sl|Združene države|f|p}} (short form), {{t|sl|ZDA}}
+* Slovene: {{t|sl|Združene države Amerike|f|p}}, {{t|sl|Združene države|f|p}}, {{t|sl|ZDA}}
 * {{trreq|st}}
-* Spanish: {{t+|es|Estados Unidos de América|m|s}}, {{qualifier|short form}} {{t+|es|Estados Unidos|m|s}}, {{qualifier|abbreviation}} {{t-|es|EE. UU.|m|s}}, {{t-|es|EEUU}}
+* Spanish: {{t+|es|Estados Unidos de América|m|p}}, {{t+|es|Estados Unidos|m|p}}, {{t-|es|EE. UU.|m|p}}, {{t-|es|EEUU|m|p}}
 * Swahili: {{t|sw|Muungano wa Madola ya Amerika}}
 * Swedish: {{t|sv|Amerikas förenta stater}}, {{t|sv|Förenta staterna}}
 * Tagalog: {{t|tl|Estados Unidos ng Amerika|xs=Tagalog}}
@@ -113,19 +111,19 @@
 * Tamil: {{t|ta|அமெரிக்க ஐக்கிய நாடு|tr=amerikka aikkiya nāṭu|sc=Taml}}
 * Tatar: {{t|tt|Америка Кушма Штатлары|tr=Amerika Quşma Ştatları|sc=Cyrl}}
 * Telugu: {{t|te|అమెరికా సంయుక్త రాష్ట్రాలు|tr=amerikā sanyukta rāṣṭrAlu|sc=Telu}}
-* Thai: {{Thai|[[สหรัฐอเมริกา]]}} (sàhà rát àmayrígaa), {{t|th|อเมริกา|tr=àmayrígaa}}, {{t|th|ประเทศสหรัฐอเมริกา|tr=bpràtêt sàhà rát àmayrígaa}}
+* Thai: {{t|th|สหรัฐอเมริกา|tr=sàhà rát àmayrígaa}}, {{t|th|อเมริกา|tr=àmayrígaa}}, {{t|th|ประเทศสหรัฐอเมริกา|tr=bpràtêt sàhà rát àmayrígaa}}
 * Turkish: {{t+|tr|Amerika Birleşik Devletleri}}, {{t-|tr|Birleşik Devletler}}, {{t+|tr|ABD}}, {{t+|tr|Amerika}}
 * Turkmen: {{t|tk|Amerikanyň Birleşen Ştatlary}}
 * Ukrainian: {{t|uk|Сполучені Штати Америки|m|p|tr=Spolúčeni Štáty Améryki|xs=Ukrainian}}, {{t+|uk|США|m|p|tr=se-še-á|xs=Ukrainian}}, {{t|uk|Злучені Штати Америки|m|p|tr=Zlúčeni Štáty Améryki|sc=Cyrl}}, {{t|uk|ЗША|m|p|tr=ze-še-á|sc=Cyrl}}
 * Urdu: {{t|ur|ریاستہائے متحدہ امریکہ|tr=riyaastahaa'e muttaHidah amriikaa|xs=Urdu}}
-* Uyghur: {{ug-Arab|[[ئامېرىكا قوشما شتاتلىرى]]}} (’amerika quşma ştatleri)
+* Uyghur: {{t|ug|ئامېرىكا قوشما شتاتلىرى|tr=’amerika quşma ştatleri|sc=Arab}}
 * Uzbek: {{t|uz|Amerika Qo'shma Shtatlari}}
-* Vietnamese: {{t+|vi|Hoa Kỳ|xs=Vietnamese}}, {{t|vi|Nước Mỹ|xs=Vietnamese}}, {{t|vi|Mỹ Quốc|xs=Vietnamese}} (''short forms''); {{t|vi|Hợp chúng quốc Hoa Kỳ|xs=Vietnamese}} (''long form''); {{t-|vi|HK|xs=Vietnamese}} (''abbr.''), {{t+|vi|Mỹ|xs=Vietnamese}} (''abbr.'')
+* Vietnamese: {{t+|vi|Hoa Kỳ|xs=Vietnamese}}, {{t|vi|Nước Mỹ|xs=Vietnamese}}, {{t|vi|Mỹ Quốc|xs=Vietnamese}}, {{t|vi|Hợp chúng quốc Hoa Kỳ|xs=Vietnamese}}, {{t-|vi|HK|xs=Vietnamese}}, {{t+|vi|Mỹ|xs=Vietnamese}}
 * Volapük: {{t|vo|Lamerikän}}, {{t|vo|Tats-Pebalöl Nolüda-Meropa}}, {{t|vo|Tats-Pebalöl Meropa}}, {{t|vo|Tats-Pebalöl}}
 * Võro: [[Ameeriga Ütisriigiq]]
 * Welsh: {{t|cy|Unol Daleithiau America}}
-* West Frisian: [[Feriene Steaten fan Amearika]]
-* Yiddish: ''short form'': {{t-|yi|פֿאַראייניקטע שטאַטן|p|tr=Fareynikte Shtatn|xs=Yiddish}}
+* West Frisian: {{t|fy|Feriene Steaten fan Amearika}}
+* Yiddish: {{t-|yi|פֿאַראייניקטע שטאַטן|p|tr=Fareynikte Shtatn|xs=Yiddish}}
 {{trans-bottom}}
 
 ====Derived terms====
