--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -543,5 +543,141 @@
 * [[playful]]
 * [[play games]]
 * [[playground]]
+* [[play hardball]]
+* [[play hard to get]]
+* [[play hooky]]
+* [[play house]]
+* [[playhouse]]
+* [[play in]]
+* [[play it by ear]]
+* [[play it safe]]
+* [[play lunch]]
+* [[playmate]]
+* [[play money]]
+* [[playoff]]/[[play-off]]/[[play off]]
+* [[play Old Harry]]
+* [[play on]]
+* [[play one against another]]
+* [[play one's cards right]]
+* [[play on words]]
+* [[playout]]/[[play out]]
+* [[playpen]]
+* [[play possum]]
+* [[playroom]]
+* [[playschool]]
+* [[play second fiddle]]
+* [[play silly buggers]]
+* [[play someone like a fiddle]]
+* [[playsuit]]
+{{rel-mid3}}
+* [[play the field]]
+* [[play the fool]]
+* [[play the ponies]]
+* [[play the race card]]
+* [[play the same tape]]
+* [[play the white man]]
+* [[plaything]]
+* [[playtime]]
+* [[play to the gallery]]
+* [[play to win]]
+* [[play truant]]
+* [[play up]]
+* [[play upon]]
+* [[playwear]]
+* [[play with]]
+* [[play with fire]]
+* [[play with oneself]]
+* [[playwright]]
+* [[plug-and-play]]
+* [[power play]]
+* [[quad play]]
+* [[radio play]]
+* [[rain stopped play]]
+* [[roleplay]]/[[role play]]/[[role-play]]
+* [[screen play]]/[[screenplay]]
+* [[shadow play]]
+* [[squeeze play]]
+* [[triple play]]
+* [[turnabout is fair play]]
+* [[two can play that game]]
+* [[war play]]
+* [[when the cat's away the mice will play]]
+* [[word play]]/[[wordplay]]
+{{rel-bottom}}
 
-The S.C.E.S. has a play every year. The play is about Christmas.
+===Statistics===
+* {{rank|London|save|length|580|play|remained|bear|service}}
+
+[[Category:1000 English basic words]]
+[[Category:English copulative verbs]]
+[[Category:English ergative verbs]]
+[[Category:en:Buttons]]
+
+----
+
+==Italian==
+
+===Etymology===
+{{etyl|en|it}}
+
+===Noun===
+{{head|it|noun|g=m}} {{inv}}
+
+# [[#English|play]] (theatrical performance; start key)
+
+===Interjection===
+'''play!'''
+
+# used to start a game of Tennis
+
+[[Category:Italian interjections]]
+
+[[ang:play]]
+[[ar:play]]
+[[ast:play]]
+[[az:play]]
+[[br:play]]
+[[cs:play]]
+[[cy:play]]
+[[de:play]]
+[[et:play]]
+[[el:play]]
+[[es:play]]
+[[eu:play]]
+[[fa:play]]
+[[fr:play]]
+[[ko:play]]
+[[hr:play]]
+[[io:play]]
+[[id:play]]
+[[it:play]]
+[[kn:play]]
+[[kk:play]]
+[[sw:play]]
+[[ku:play]]
+[[lo:play]]
+[[lt:play]]
+[[li:play]]
+[[hu:play]]
+[[mg:play]]
+[[ml:play]]
+[[my:play]]
+[[fj:play]]
+[[nl:play]]
+[[ja:play]]
+[[oc:play]]
+[[pl:play]]
+[[pt:play]]
+[[ru:play]]
+[[sm:play]]
+[[simple:play]]
+[[fi:play]]
+[[sv:play]]
+[[tl:play]]
+[[ta:play]]
+[[te:play]]
+[[th:play]]
+[[tr:play]]
+[[uk:play]]
+[[vi:play]]
+[[zh:play]]
