--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -8,7 +8,7 @@
 See {{term|spell#Etymology_2|spell}}
 
 ====Alternative forms====
-* [[spelled]] {{qualifier|US|Canadian}}
+* [[spelled]] {{qualifier|US|Canada}}
 
 ====Verb====
 '''spelt'''
@@ -18,7 +18,7 @@ See {{term|spell#Etymology_2|spell}}
 #*: Yes, yes; he teaches boys the hornbook. What is a, b, '''spelt''' / backward with the horn on his head?
 
 ====Usage notes====
-The form ''spelt'' may predominate over ''spelled'' in parts of North America with heavier English settlement since the 19th century.  One such place is [[Utah]].
+The form ''spelt'' may predominate over ''spelled'' in parts of North America with heavier English settlement since the 19th century. One such place is [[Utah]].
 
 ===Etymology 2===
 From {{etyl|enm}}, from {{etyl|ang}} {{term|spelt||spelt, corn|lang=ang}}, from {{etyl|osx}} {{term|spelta||spelt|lang=osx}}; or from {{etyl|LL.}} {{term|spelta||spelt|lang=la}}, of {{etyl|gem}} origin, from {{etyl|frk}} *{{term||spelta|spelt|lang=frk}}; all from {{etyl|gem-pro|en}} {{recons|spiltō|lang=gem-pro}}, {{recons|spiltaz||spelt|lang=gem-pro}}, from {{etyl|ine-pro|en}} {{recons|(s)pelbh-|lang=ine-pro}}, {{recons|(s)pelbh-t-||spelt, spelt meal|lang=ine-pro}}. Cognate with {{etyl|goh|-}} {{term|spelza||spelt|lang=goh}}, Modern {{etyl|de|-}} {{term|Spelz||wheat-like cereal|lang=de}}, {{etyl|nl|-}} {{term|spelt||spelt|lang=nl}}.
@@ -41,7 +41,6 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|spelt||spelt, corn|lang=ang}}, from 
 * Catalan: {{t-|ca|espelta|f}}
 * Chinese:
 *: Mandarin: {{t|cmn|斯卑爾脫小麥|sc=Hani}}, {{t|cmn|斯卑尔脱小麦|tr=sībēi'ěrtuōxiǎomài|sc=Hani}}
-* Serbo-Croatian: {{t-|sh|pir|m}}, {{t-|sh|prapšenica|f}}
 * Czech: {{t-|cs|pšenice špalda|f}}
 * Danish: {{t-|da|spelt}}
 * Dutch: {{t+|nl|spelt}}
@@ -61,10 +60,12 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|spelt||spelt, corn|lang=ang}}, from 
 * Portuguese: {{t-|pt|espelta|f}}
 * Romanian: {{t+|ro|alac|n}}
 * Russian: {{t+|ru|полба|f|tr=pólba}}
-* Serbo-Croatian: {{t-|sh|прапшеница|f|tr=prapšenica|sc=Cyrl}}
+* Serbo-Croatian:
+*: Cyrillic: {{t-|sh|прапшеница|f|sc=Cyrl}}, {{t|sh|пир|sc=Cyrl}}
+*: Roman: {{t|sh|prapšenica|f}}, {{t|sh|pir}}
 * Slovene: {{t-|sl|pira|f}}
 * Spanish: {{t-|es|espelta|f}}, {{t-|es|escanda|f}}
-* Swedish: {{t-|sv|dinkel}},  {{t+|sv|spelt}}
+* Swedish: {{t-|sv|dinkel}}, {{t+|sv|spelt}}
 * Walloon: {{t-|wa|speate}}
 {{trans-bottom}}
 
@@ -77,8 +78,7 @@ From {{etyl|gmh}} {{term|spalden|lang=gmh}}, or {{etyl|non}} {{term|spald|lang=n
 # {{dialect|Northern England|Scotland}} A thin piece of wood or metal; a splinter.
 
 ===Anagrams===
-* [[pelts#English|pelts]]
-* [[slept#English|slept]]
+* [[pelts#English|pelts]], [[slept#English|slept]]
 
 ----
 
