--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -99,7 +99,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Udi: {{tø|udi|чӀугъ}}
 * Ukrainian: {{t-|uk|вітка|f|tr=vítka|sc=Cyrl}}, {{t+|uk|галузь|f|tr=halúzʹ|sc=Cyrl}}, {{t-|uk|галузка|f|tr=halúzka|sc=Cyrl}}, {{t-|uk|гілка|f|tr=hílka|sc=Cyrl}}, {{t-|uk|гілочка|f|tr=híločka|sc=Cyrl}}
 * Vietnamese: {{t+|vi|nhánh}}
-* !Xóõ: [[gǀkxʻāa-kú]] (''small one'')
+* ǃXóõ: [[gǀkxʻāa-kú]] (''small one'')
 {{trans-bottom}}
 
 {{trans-top|something that divides like the branch of a tree}}
@@ -130,7 +130,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 {{trans-top|office of an organization with several locations}}
 * Armenian: {{t-|hy|մասնաճյուղ|tr=masnač̣yuġ}}
 * Belarusian: {{t-|be|філіял|m|tr=filijál|sc=Cyrl}}
-* Bulgarian: {{t+|bg|клон|m|tr=klon}},  {{t+|bg|филиал|m|tr=filiál}}
+* Bulgarian: {{t+|bg|клон|m|tr=klon}}, {{t+|bg|филиал|m|tr=filiál}}
 * Chinese:
 *: Mandarin: {{t|cmn|支店|tr=zhīdiàn|sc=Hani}}, {{t|cmn|部門|sc=Hani}}, {{t|cmn|部门|tr=bùmén|sc=Hani}}
 * Czech: {{t-|cs|pobočka|f}}
@@ -169,7 +169,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Dutch: {{t+|nl|branch}} (of business), {{t-|nl|bedrijfstak}} (of business), {{t+|nl|vakgebied}} (of knowledge)
 * Finnish: {{t+|fi|ala}}
 * German: {{t+|de|Branche|f}} (of business)
-* Hungarian: {{t+|hu|üzletág}}, {{t+|hu|szak}},  {{t+|hu|csoport}}
+* Hungarian: {{t+|hu|üzletág}}, {{t+|hu|szak}}, {{t+|hu|csoport}}
 * Italian: {{t+|it|branca|f}}
 * Polish: {{t+|pl|gałąź|f}}, {{t+|pl|dział|m}}
 {{trans-mid}}
@@ -218,7 +218,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Finnish: {{t+|fi|haarautua}}
 * German: [[abzweigen]]
 {{trans-mid}}
-* Hungarian: {{t+|hu|hajt}},  {{t-|hu|sarjad}},  {{t+|hu|sarjadzik}}
+* Hungarian: {{t+|hu|hajt}}, {{t-|hu|sarjad}}, {{t+|hu|sarjadzik}}
 * Polish: {{t-|pl|rozgałęziać się}}
 * Portuguese: {{t+|pt|dividir}}, {{t+|pt|partir}}, {{t+|pt|separar}}, {{t+|pt|brotar}}
 * Romanian: {{t-|ro|ramifica}}
@@ -229,7 +229,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Bulgarian: {{t-|bg|пускам клони}}
 * Finnish: {{t+|fi|haarautua}}, {{t-|fi|haaraantua}}
 * German: {{t+|de|verzweigen}}
-* Hungarian: {{t+|hu|alapít}},  {{t+|hu|létrehoz}}
+* Hungarian: {{t+|hu|alapít}}, {{t+|hu|létrehoz}}
 {{trans-mid}}
 * Polish: {{t-|pl|rozgałęziać się}}
 * Portuguese: {{t+|pt|brotar}}
